20030902
 - (djm) OpenBSD CVS Sync
   - deraadt@cvs.openbsd.org 2003/08/24 17:36:51
     [auth2-gss.c]
     64 bit cleanups; markus ok
   - markus@cvs.openbsd.org 2003/08/28 12:54:34
     [auth-krb5.c auth.h auth1.c monitor.c monitor.h monitor_wrap.c]
     [monitor_wrap.h readconf.c servconf.c session.c ssh_config.5]
     [sshconnect1.c sshd.c sshd_config sshd_config.5]
     remove kerberos support from ssh1, since it has been replaced with GSSAPI;
     but keep kerberos passwd auth for ssh1 and 2; ok djm, hin, henning, ...
   - markus@cvs.openbsd.org 2003/08/29 10:03:15
     [compat.c compat.h]
     SSH_BUG_K5USER is unused; ok henning@
   - markus@cvs.openbsd.org 2003/08/29 10:04:36
     [channels.c nchan.c]
     be less chatty; debug -> debug2, cleanup; ok henning@
   - markus@cvs.openbsd.org 2003/08/31 10:26:04
     [progressmeter.c]
     pass file_size + 1 to snprintf: fixes printing of truncated
     file names; fix based on patch/report from sturm@;
   - markus@cvs.openbsd.org 2003/08/31 12:14:22
     [progressmeter.c]
     do write to buf[-1]
   - markus@cvs.openbsd.org 2003/08/31 13:29:05
     [session.c]
     call ssh_gssapi_storecreds conditionally from do_exec(); 
     with sxw@inf.ed.ac.uk
   - markus@cvs.openbsd.org 2003/08/31 13:30:18
     [gss-serv.c]
     correct string termination in parse_ename(); sxw@inf.ed.ac.uk
   - markus@cvs.openbsd.org 2003/08/31 13:31:57
     [gss-serv.c]
     whitspace KNF
   - markus@cvs.openbsd.org 2003/09/01 09:50:04
     [sshd_config.5]
     gss kex is not supported; sxw@inf.ed.ac.uk
   - markus@cvs.openbsd.org 2003/09/01 12:50:46
     [readconf.c]
     rm gssapidelegatecreds alias; never supported before
   - markus@cvs.openbsd.org 2003/09/01 13:52:18
     [ssh.h]
     rm whitespace
   - markus@cvs.openbsd.org 2003/09/01 18:15:50
     [readconf.c readconf.h servconf.c servconf.h ssh.c]
     remove unused kerberos code; ok henning@
   - markus@cvs.openbsd.org 2003/09/01 20:44:54
     [auth2-gss.c]
     fix leak